// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamoDB module functions get 1`] = `
{
  "key": {
    "id": {
      "S": "id",
    },
  },
  "operation": "GetItem",
}
`;

exports[`DynamoDB module functions put 1`] = `
{
  "attributeValues": {
    "value": {
      "N": 10,
    },
  },
  "key": {
    "id": {
      "S": "abc",
    },
  },
  "operation": "PutItem",
}
`;

exports[`dynamodb helpers s3 objects four parameter function 1`] = `
{
  "S": "{"s3":{"key":"foo","bucket":"bar","region":"baz","version":"beep"}}",
}
`;

exports[`dynamodb helpers s3 objects fromS3ObjectJson 1`] = `undefined`;

exports[`dynamodb helpers s3 objects three parameter function 1`] = `
{
  "S": "{"s3":{"key":"foo","bucket":"bar","region":"baz"}}",
}
`;

exports[`dynamodb helpers toBinary 1`] = `
{
  "B": "foo",
}
`;

exports[`dynamodb helpers toBinarySet 1`] = `
{
  "BS": [
    "foo",
    "bar",
    "baz",
  ],
}
`;

exports[`dynamodb helpers toBoolean 1`] = `
{
  "BOOL": true,
}
`;

exports[`dynamodb helpers toDynamoDB boolean 1`] = `
{
  "BOOL": true,
}
`;

exports[`dynamodb helpers toDynamoDB number 1`] = `
{
  "N": 12345,
}
`;

exports[`dynamodb helpers toDynamoDB string 1`] = `
{
  "S": "test",
}
`;

exports[`dynamodb helpers toList 1`] = `
{
  "L": [
    {
      "S": "foo",
    },
    {
      "N": 123,
    },
    {
      "M": {
        "bar": {
          "S": "baz",
        },
      },
    },
  ],
}
`;

exports[`dynamodb helpers toMap 1`] = `
{
  "M": {
    "baz": {
      "N": 1234,
    },
    "beep": {
      "L": [
        {
          "S": "boop",
        },
      ],
    },
    "foo": {
      "S": "bar",
    },
  },
}
`;

exports[`dynamodb helpers toMapValues 1`] = `
{
  "baz": {
    "N": 1234,
  },
  "beep": {
    "L": [
      {
        "S": "boop",
      },
    ],
  },
  "foo": {
    "S": "bar",
  },
}
`;

exports[`dynamodb helpers toNull 1`] = `
{
  "NULL": null,
}
`;

exports[`dynamodb helpers toNumber 1`] = `
{
  "N": 12345,
}
`;

exports[`dynamodb helpers toNumberSet 1`] = `
{
  "NS": [
    1,
    23,
    4.56,
  ],
}
`;

exports[`dynamodb helpers toString 1`] = `
{
  "S": "test",
}
`;

exports[`dynamodb helpers toStringSet 1`] = `
{
  "SS": [
    "foo",
    "bar",
    "baz",
  ],
}
`;
